--- a/vignettes/gtfs2emis-vignette.Rmd
+++ b/vignettes/gtfs2emis-vignette.Rmd
@@ -5,60 +5,59 @@ abstract: Package `gtfs2emis` generates emissions estimates from GTFS data.
 output: github_document
 urlcolor: blue
 vignette: |
-  %\VignetteEncoding{UTF-8}
+%\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteIndexEntry{gtfs2emis}
----
-02 June 2020
-
+  ---
+  02 June 2020
+  
 ```{r, include = FALSE}
-knitr::opts_chunk$set(
+  knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
-)
+  )
 ```
-# Introduction
-
-Package `gtfs2emis` estimates hot exhaust emissions from GTFS data. This vignette introduces the main functions of the package. It uses the following packages:
-
+  # Introduction
+  
+  Package `gtfs2emis` estimates hot exhaust emissions from GTFS data. This vignette introduces the main functions of the package. It uses the following packages:
+  
 ```{r, message = FALSE}
-library(gtfs2emis)
-library(vein)
-library(gtfs2gps)
-library(data.table)
-library(magrittr)
-library(ggplot2)
+  library(gtfs2emis)
+  library(vein)
+  library(magrittr)
+  library(gtfs2gps)
+  library(data.table)
+  library(magrittr)
+  library(ggplot2)
 ```
-
-# GTFS data
-
-To estimate emissions from GTFS data, first it is necessary to compute `speed` and distance (`dist`) for each trip.
-These information are created when we convert GTFS data to GPS-like
-records, using `gtfs2gps::gtfs2gps()`. The example below uses GTFS data from Porto Alegre municipality, in Brazil. It processes only one `shape_id` in order to speedup processing time.
-
+  
+  # GTFS data
+  
+  To estimate emissions from GTFS data, first it is necessary to compute `speed` and distance (`dist`) for each trip.
+  These information are created when we convert GTFS data to GPS-like
+  records, using `gtfs2gps::gtfs2gps()`. The example below uses GTFS data from Porto Alegre municipality, in Brazil. It processes only one `shape_id` in order to speedup processing time.
+  
 ```{r, message = FALSE}
-poa <- gtfs2gps::read_gtfs(system.file("extdata/saopaulo.zip", package = "gtfs2gps")) %>%
+  # 'poa' to 'spo'
+  spo <- gtfs2gps::read_gtfs(system.file("extdata/saopaulo.zip", package = "gtfs2gps")) %>%
   gtfs2gps::filter_by_shape_id("51982")
-poa_gps <- gtfs2gps::gtfs2gps(poa)
-poa_gps
+  spo_gps <- gtfs2gps::gtfs2gps(spo)
 ```
-The GPS-like data can be converted into line segments (`linestring`). This conversion breaks the trips into several segments, each one between two stops.
-
-
+  The GPS-like data can be converted into line segments (`linestring`). This conversion breaks the trips into several segments, each one between two stops.
+  
+  
 ```{r}
-poa_gpslines <- gtfs2gps::gps_as_sflinestring(poa_gps) %>%
-  dplyr::select(speed, dist, departure_time)
+spo_gpslines <- gtfs2gps::gps_as_sflinestring(spo_gps) %>% dplyr::select(speed, dist, departure_time)
 
-dim(poa_gps)
-dim(poa_gpslines)
+dim(spo_gps)
+dim(spo_gpslines)
 ```
 
 We will also update the two relevant attributes to use units of measurement.
 
 ```{r}
-poa_gpslines$speed <- units::set_units(poa_gpslines$speed, "km/h")
-poa_gpslines$dist <- units::set_units(poa_gpslines$dist, "km")
-
+spo_gpslines$speed <- units::set_units(spo_gpslines$speed, "km/h")
+spo_gpslines$dist <- units::set_units(spo_gpslines$dist, "km")
 ```
 
 # Fleet data
@@ -73,33 +72,21 @@ In this situation, usually only a distribution of fleet is known. In this case, 
 
 
 ```{r}
-# PEDRO: melhor ano como colnames ou como uma coluna separada?
-# como coluna separada o ano pode ser um numero
-total_fleet <- data.table::data.table("2005" = 1, "2010" = 61, "2011" = 50,
-                                      "2012" = 1, "2014" = 45, "2015" = 18,
-                                      "2017" = 62, "2018" = 27, "2019" = 31)
+total_fleet <- data.table::data.table(year = c(2005,2010,2011,2012,2014,2015,2017,2018,2019),
+                                      bus = c(1,61,50,1,45,18,62,27,31),
+                                      veh_type_euro = "Urban Buses Standard 15 - 18 t",
+                                      euro_stage = c("II", "IV", "IV", "V", "V", "V", "V", "V","V"))
+total_fleet[,fleet_composition := bus/sum(bus)]
 ```
-with probability of distribution based on frequency of `total_fleet`
+with probability of distribution based on frequency of `distribution` column.
 
-```{r}
-# PEDRO: melhor nao seria ter veh_distrib dentro de total_fleet e passar simplesmente
-# total_fleet como argumento para as funcoes?
-# total <- sum(total_fleet[1, ]
-# total_fleet[1, ] <- total_fleet[1, ] / total
-veh_distrib <- as.numeric(total_fleet[1, ] / sum(total_fleet[1, ]))
-veh_distrib
-sum(veh_distrib)
-```
 
 ## Detailed data
 
-Detailed data is used when the category of the vehicle is known for each route or shape of GTFS.
+Detailed data is used when the category of the vehicle is known for each route or shape of GTFS. The code below shows an example of specific fleet for each bus route.
 
 ```{r}
-# PEDRO: este objeto nao e usado em nenhum outro lugar deste vignette
-det_fleet <- data.table::data.table(shape_id = unique(poa$shapes$shape_id),
-                                    # PEDRO: bus_age nao poderia vir de veh_distrib ou de alguma
-                                    # fonte externa?
+det_fleet <- data.table::data.table(shape_id = unique(spo$shapes$shape_id),
                                     bus_age = c("2010", "2011", "2012", "2013"),
                                     bus_fuel = "Diesel")
 ```
@@ -113,19 +100,12 @@ Emission factors functions are expressed in `g/km`. They can also be speed-depen
 Supported pollutants are (g/km): CO, NOx, HC, PM, CH4, NMHC, CO2, SO2, Pb, FC , NO, and NO2.
 
 ```{r}
-# PEDRO: euro_stage nao poderia ser um atributo de veh_distrib?
-euro_stage = c("II", "IV", "IV", "V", "V", "V", "V", "V", "V") # euro equivalent for brazilian fleet by years  
-
-EF_europe <- ef_europe(vel = poa_gpslines$speed,
-                       veh_type = "Urban Buses Standard 15 - 18 t",
+EF_europe <- ef_europe(speed = spo_gpslines$speed,
+                       veh_type = total_fleet$veh_type_euro, # `total_fleet$veh_type`
                        tech = "SCR",
-                       euro = euro_stage,
-                       pol = c("CO", "PM"),
-                       aggregate = TRUE,
-                       veh = veh_distrib) # PEDRO: onde esta a idade aqui nos parametros?
-head(EF_europe)
-# PEDRO: isto aqui eh para cada veh_distrib, certo? nao seria melhor retornar uma
-# coluna a mais no data.frame para indicar isto?
+                       euro = total_fleet$euro_stage,
+                       pollutant = c("CO", "PM")) # fleet_composition
+head(EF_europe,2)
 ```
 
 ## United States emission factors for buses categories
@@ -133,37 +113,24 @@ head(EF_europe)
 Supported pollutants are (g/km): CO, NOx, Hydrocarbons as TOG (total organic gases), ROG (reactive organic gases), THC, CH4, PM10, PM2.5, SOx, CO2, N2O and CH4.
 
 ```{r}
-EF_emfac <- gtfs2emis::ef_emfac(pol = c("CO","PM10"),
-                                calendar_year = "2019",
-                                model_year = colnames(total_fleet),
-                                # PEDRO: este argumento acima pode sumir?
-                                speed = poa_gpslines$speed,
-                                veh = veh_distrib, # PEDRO: aqui viraria total_fleet
-                                aggregate = TRUE,
-                                fuel = "Diesel")
-head(EF_emfac)
+EF_usa <- ef_usa(pollutant = c("CO","PM10"),
+                 calendar_year = "2019",
+                 model_year = total_fleet$year,
+                 speed = spo_gpslines$speed,
+                 fuel = "Diesel")
+head(EF_usa,2)
 ```
 
 ## Brazil emission factors for buses
 
 Supported pollutants are (g/km): CO, HC, NMHC, CH4, NOx, CO2, RCHO, ETOH, PM, N2O, KML, FC, NO2, NO, gD/KWH, gCO2/KWH, RCHO, CO_0km, HC_0km, NMHC_0km, NOx_0km, NO2_0km ,NO_0km, RCHO_0km, ETOH_0km, and FS (fuel sales). This data was Obtained from `vein` package.
- 
-```{r}
-years <- c("2005", "2010", "2011", "2012", "2014", "2015", "2017", "2018")
 
+```{r}
 # PEDRO: encapsular isto em uma funcao?
 # note que o usuario precisa controlar year e veh_distrib manualmente
-EF_brazil <- lapply(c("CO", "PM"), function(j){
-  temp_ef_br <- sapply(seq_along(years), function(i){# i = colnames(total_fleet)[1]
-    vein::ef_cetesb(p = j,
-                    veh = "BUS_URBAN_D",
-                    year = years[i],
-                    agemax = 1) * veh_distrib[i]
-  }) %>% units::set_units("g/km") %>% sum()
-  return(temp_ef_br)
-})
-names(EF_brazil) <- paste0(c("CO", "PM"), "_avg")
-EF_brazil
+EF_brazil <- ef_brazil(pollutant = c("CO","PM"),veh_type = "BUS_URBAN_D", #veh_type
+                       years = total_fleet$year) # fleet_composition
+head(EF_brazil,2)
 ```
 
 # Emission 
@@ -174,56 +141,56 @@ Emissions are estimated as a product between distance (units `km`) with emission
 ## Using different emission factors
 
 ```{r}
-# PEDRO: como a conversao é simplesmente uma multiplicação, isto nao poderia estar nas 
-# funcoes acima? receberia o poa_gpslines e teria um argumento com o nome do atributo
-# a ser criado
-
-# USA
-
-# PEDRO: a funcao abaixo retorna uma lista. poderia retornar um data.frame
-emi_usa <- gtfs2emis::emis(veh = 1, dist = poa_gpslines$dist, ef = EF_emfac)
-emi_usa <- as.data.frame(emi_usa)
+emi_usa <- gtfs2emis::emis(fleet_composition = total_fleet$fleet_composition,
+                           dist = spo_gpslines$dist,
+                           ef = EF_usa)
+head(emi_usa,2)
 colnames(emi_usa) <- paste0("USA_", colnames(emi_usa))
-poa_gpslines <- cbind(poa_gpslines, emi_usa)
+# cbind
+spo_gpslines <- cbind(spo_gpslines, emi_usa)
 
 # EUROPE
-emi_europe <- gtfs2emis::emis(veh = 1, dist = poa_gpslines$dist, ef = EF_europe)
-emi_europe <- as.data.frame(emi_europe)
+emi_europe <- gtfs2emis::emis(fleet_composition = total_fleet$fleet_composition,
+                              dist = spo_gpslines$dist,
+                              ef = EF_europe,
+                              aggregate = TRUE)
 colnames(emi_europe) <- paste0("EU_", colnames(emi_europe))
-poa_gpslines <- cbind(poa_gpslines, emi_europe)
+spo_gpslines <- cbind(spo_gpslines, emi_europe)
 
 # BRAZIL (not speed dependent emission factor)
-unique_names <- paste0("Brazil_", names(EF_brazil))
-emi_brazil <- gtfs2emis::emis(veh = 1, dist = poa_gpslines$dist, ef = EF_brazil)
-emi_brazil <- as.data.frame(emi_brazil)
-poa_gpslines <- cbind(poa_gpslines, emi_brazil)
+emi_brazil <- gtfs2emis::emis(fleet_composition = total_fleet$fleet_composition,
+                              dist = spo_gpslines$dist,
+                              ef = EF_brazil)
+colnames(emi_brazil) <- paste0("BR_", colnames(emi_brazil))
+spo_gpslines <- cbind(spo_gpslines, emi_brazil)
 ```
 
 # Post-processing emissions
 
 ## Hour time stamp
 ```{r}
-# PEDRO: eu prefiro algo do tipo:
-#hour_post <- gtfs2emis::emis_post(poa_gpslines,
-#                                  emi = "emi_usa",
-#                                  time = "hour",
-#                                  time_dt = "departure_time") # usar departure_time como default
-
-hour_post <- gtfs2emis::emis_post(emi = poa_gpslines$USA_CO_avg,
-                                  time = "hour",
-                                  time_dt = poa_gpslines$departure_time)
+hour_post <- gtfs2emis::emis_post(data = spo_gpslines,
+                                  emi = c('BR_CO_total','EU_CO_total'), 
+                                  time_class = "hour",
+                                  time_column = 'departure_time')
 
 ggplot() + 
-  geom_bar(data = hour_post, aes(x = time, y = as.numeric(x)), stat = "identity")
+  geom_bar(data = hour_post, 
+           aes(x = departure_time, y = as.numeric(BR_CO_total)),stat = "identity")
 ```
 
 ## Hour-minute time stamp
 ```{r}
-hour_post <- gtfs2emis::emis_post(emi = poa_gpslines$USA_CO_avg,
-                                  time = "hour-minute",
-                                  time_dt = poa_gpslines$departure_time)
+hour_post <- gtfs2emis::emis_post(data = spo_gpslines,
+                                  emi = c('BR_CO_total','EU_CO_total'), # check better names
+                                  time_class = "hour-minute",
+                                  time_column = 'departure_time')
+
+breaks <- hour_post$departure_time[seq(1,nrow(hour_post),length.out = 5)]
 ggplot() + 
-  geom_bar(data = hour_post,aes(x = time, y = as.numeric(x)), stat = "identity")
+  geom_bar(data = hour_post, 
+           aes(x = departure_time, y = as.numeric(BR_CO_total)),stat = "identity") +
+    scale_x_discrete(breaks = breaks)
 ```
 
 ## Spatialize
@@ -233,15 +200,15 @@ Make grid to visualize emissions as a map.
 ```{r}
 # PEDRO: funcao para escolher a resolucao? esta funcao deveria receber um objeto
 # com unidade de medida, para casar com "km"
-grid_gps <- vein::make_grid(spobj = poa_gpslines, width =  0.25 / 102.47) # 500 meters
+grid_gps <- vein::make_grid(spobj = spo_gpslines, width =  0.25 / 102.47) # 500 meters
 plot(grid_gps["id"])
 ```
 
 Intersection operation
 
 ```{r}
-poa_sf <- sf::st_as_sf(poa_gpslines)
-pol_gps <- vein::emis_grid(spobj = poa_sf["USA_CO_avg"], g = grid_gps)
-pol_gps <- pol_gps[as.numeric(pol_gps$USA_CO_avg) > 0, ]
-plot(pol_gps["USA_CO_avg"])
+spo_sf <- sf::st_as_sf(spo_gpslines)
+pol_gps <- vein::emis_grid(spobj = spo_sf["EU_CO_total"], g = grid_gps)
+pol_gps <- pol_gps[as.numeric(pol_gps$EU_CO_total) > 0, ]
+plot(pol_gps["EU_CO_total"])
 ```
