--- a/vignettes/gtfs2emis-vignette.Rmd
+++ b/vignettes/gtfs2emis-vignette.Rmd
@@ -38,7 +38,7 @@ vignette: |
   records, using `gtfs2gps::gtfs2gps()`. The example below uses a sample of the GTFS data from São Paulo municipality, in Brazil. In this example we will only process the trips of two `shape_id`s to speedup processing time.
   
 ```{r, message = FALSE}
-  # 'poa' to 'spo'
+  # 'spo'
   spo <- gtfs2gps::read_gtfs(system.file("extdata/saopaulo.zip", package = "gtfs2gps")) %>%
   gtfs2gps::filter_by_shape_id(c("51982","50784"))
   spo_gps <- gtfs2gps::gtfs2gps(spo)
@@ -156,7 +156,7 @@ head(EF_brazil, 3)
 
 # Emission 
 
-Now that we have route segment-level information on vehicles, distances and emission factors, emissions levels can be estimated as a product between distances (units `km`) and emission factors (units `g/km`). Using the `emis` function we can can estimate emissions at high spatial and temporal resolutions.
+Now that we have route segment-level information on vehicles, distances and emission factors, emissions levels can be estimated as a product between distances (units `km`) and emission factors (units `g/km`). Using the `emis` function we can estimate emissions at high spatial and temporal resolutions.
 
 Here is an example using using different emission factors from Europe, USA and Brazil.
 
@@ -252,45 +252,54 @@ plot(grid_gps["id"])
 
 Intersect and aggregate data
 
+Emissions can be allocated into grid through emis_grid function, which sums the total emissions into a single grid cell.
+
 ```{r}
 # convert estimates to sf spatial object
 spo_sf <- sf::st_as_sf(spo_emis)
 
-# spatial aggregation
-pol_gps <- vein::emis_grid(spobj = spo_sf["EU_CO_total"], g = grid_gps)
-pol_gps <- pol_gps[as.numeric(pol_gps$EU_CO_total) > 0, ]
-
-ggplot() + 
+# # spatial aggregation
+ pol_gps <- gtfs2emis::emis_grid(data = spo_sf,
+                      emi = c("EU_CO_total","BR_CO_total"),
+                      grid = grid_gps,
+                      time_class = 'all periods')
+# 
+ggplot() +
   geom_sf(data=pol_gps, aes(fill=as.numeric(EU_CO_total)/1000), color=NA) +
   scale_fill_viridis_c(option = "plasma") +
-  labs(fill = "Daily CO\nemitted locally\n(Kg/km2)") +
+  labs(fill = "Daily CO\nemitted locally\n(g)") +
   theme_bw()
 
 ```
 
-
-### spatial-temporal aggregation
+User can also display gridded emissions by time and grid cell by specifying `hour` or `hour-minute` in the `time_class` argument. 
  
  
 ```{r}
-2+2
-# convert estimates to sf spatial object
+# # spatial aggregation by hour
+pol_gps_hour <- gtfs2emis::emis_grid(data = spo_sf,
+                      emi = c("EU_CO_total","BR_CO_total"),
+                      grid = grid_gps,
+                      time_class = 'hour',
+                      time_column = 'departure_time')
+# changing name for ggplot
+pol_gps_hour$time_column <- paste('Hour',pol_gps_hour$time_column)
+pol_gps_hour$time_column <- factor(pol_gps_hour$time_column ,paste("Hour",0:23))
 
-# 
-# 
-# spo_emis[, .(BR_CO2_total=sum(BR_CO2_total),
-#              EU_CO_total=sum(EU_CO_total)), by= list(geometry)]
-# 
-# dt[, size = .N, by = as.POSIXct(round(timestamp, "hour"))]
-# 
-# spo_sf <- sf::st_as_sf(spo_emis)
-# 
-# # aggregate
-# 
-# a <- st_join(spo_sf, grid_gps)
-# 
-# 
-# a %>% 
-#   mutate(hour_of_day = hour(as.POSIXct(strptime(departure_time, "%m/%d/%Y %H:%M:%S")))) %>% 
-  
+ggplot(data = pol_gps_hour) +
+  geom_sf(aes(fill=as.numeric(EU_CO_total)/1000), color=NA) +
+  scale_fill_viridis_c(option = "plasma") +
+  labs(fill = "Daily CO\nemitted locally\n(kg)") +
+    theme(panel.background = element_rect(fill = "white", 
+      colour = NA), 
+      panel.border = element_rect(fill = NA, 
+      colour = "grey20"), 
+      axis.text.x =  element_text(angle = -90),
+      panel.grid = element_line(colour = "grey92"), 
+      panel.grid.minor = element_line(size = rel(0.5)), 
+      strip.background = element_rect(fill = "grey85", 
+        colour = "grey20"), legend.key = element_rect(fill = "white", 
+        colour = NA), complete = TRUE) + 
+  facet_wrap(facets = vars(time_column))
+
 ```
